refactor: delegate logic to mappers and decompose placeOrder method